tests/return/return.exp
Error: function_return.js:7
  7: function f(x): number {
                    ^^^^^^ number. This type is incompatible with an implicitly-returned undefined.

Error: function_return.js:23
 23:   return;
       ^^^^^^^ undefined. This type is incompatible with the expected return type of
 19: function h(x): number {
                    ^^^^^^ number

Error: void.js:12
 12: (f(true): void); // error: string ~> void
      ^^^^^^^ Cannot cast `f(...)` to undefined because string [1] is incompatible with undefined [2].
  References:
   12: (f(true): void); // error: string ~> void
        ^^^^^^^ [1]: string
   12: (f(true): void); // error: string ~> void
                 ^^^^ [2]: undefined


Found 3 errors
